--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "@koa/cors": "^3.0.0",
       "@koa/router": "^8.0.8",
       "@types/jsrsasign": "^8.0.3",
+      "@types/lru-cache": "^5.1.0",
       "body-parser": "^1.18.1",
       "compression": "^1.7.4",
       "cors": "^2.8.5",
@@ -37,6 +38,7 @@
       "koa-bodyparser": "^4.2.1",
       "koa-compress": "^3.0.0",
       "ldap-ts-client": "^0.14.0",
+      "lru-cache": "^6.0.0",
       "node-cache": "^5.1.0",
       "yup": "^0.28.3"
    },
