--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
       "@types/node": "^13.1.7",
       "@types/node-cache": "^4.2.5",
       "@types/yup": "^0.26.32",
+      "@typescript-eslint/eslint-plugin": "^3.9.0",
+      "@typescript-eslint/parser": "^3.9.0",
+      "eslint": "^7.6.0",
+      "eslint-plugin-import": "^2.22.0",
+      "eslint-plugin-prefer-arrow": "^1.2.2",
+      "husky": "^4.2.5",
+      "jscpd": "^3.3.13",
+      "lint-staged": "^10.2.11",
       "ts-node": "^8.6.2",
       "ts-node-dev": "^1.0.0-pre.44",
       "typescript": "^3.9.6"
@@ -44,6 +52,17 @@
    },
    "scripts": {
       "start": "NODE_EXTRA_CA_CERTS=./root.crt ts-node-dev --no-notify src/index.ts",
-      "build": "tsc"
+      "build": "tsc",
+      "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+      "lint:fix": "npm run lint -- --fix",
+      "cpd": "jscpd src"
+   },
+   "husky": {
+     "hooks": {
+       "pre-commit": "lint-staged"
+     }
+   },
+   "lint-staged": {
+     "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
    }
 }
