[WIP] ADK-36 and ADK-35 - login to web portal using saml
* still searching on id field.  this will need to be updated to the new username field.

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,5 @@
 PORT=3000
+NODE_ENV=production
 
 FM_SERVER=https://fmserver.survey.health
 FM_USERNAME=system
@@ -7,9 +8,15 @@ FM_DATABASE=COVID-19_Questionnaire_Web
 
 AUTH_MODE=DOB
 
+#AUTH_MODE=LDAP
 LDAP_URL=ldaps://ldap.example.com
 LDAP_PREFIX=example\
 LDAP_BASEDN=dc=example,dc=com
+
+#AUTH_MODE=SAML
+SAML_ATTRIBUTE="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/upn"
+SAML_REACT_URL="http://localhost:8000"
+SAML_NODE_URL="http://localhost:3000"
 
 JWT_KEY=123456789ASDF123456789ASDF
 SKIP_PREFLIGHT_CHECK=true
