--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "typescript": "^3.9.6"
    },
    "dependencies": {
+      "@authenio/samlify-node-xmllint": "^2.0.0",
       "@js-joda/core": "^2.0.0",
       "@koa/cors": "^3.0.0",
       "@koa/router": "^8.0.8",
@@ -48,6 +49,7 @@
       "ldap-ts-client": "^0.14.0",
       "lru-cache": "^6.0.0",
       "node-cache": "^5.1.0",
+      "samlify": "^2.7.4",
       "yup": "^0.28.3"
    },
    "scripts": {
@@ -58,11 +60,11 @@
       "cpd": "jscpd src"
    },
    "husky": {
-     "hooks": {
-       "pre-commit": "lint-staged"
-     }
+      "hooks": {
+         "pre-commit": "lint-staged"
+      }
    },
    "lint-staged": {
-     "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
+      "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
    }
 }
