Tweaks to saml login
* SP initiated sso can be either redirect or post
* check referrer instead of origin header since in production we are hosting on the same domain.

--- a/.env.dist
+++ b/.env.dist
@@ -6,6 +6,7 @@ FM_USERNAME=system
 FM_PASSWORD=
 FM_DATABASE=COVID-19_Questionnaire_Web
 
+#this should be STUDENT or PARENT
 USER_MODE=STUDENT
 AUTH_MODE=DOB
 
@@ -18,6 +19,9 @@ LDAP_BASEDN=dc=example,dc=com
 SAML_ATTRIBUTE="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/upn"
 SAML_REACT_URL="http://localhost:8000"
 SAML_NODE_URL="http://localhost:3000"
+#SAML_SP_MODE should be REDIRECT or POST depending on the IDP
+SAML_SP_MODE=REDIRECT
+SAML_SP_REDIRECT_APPEND=""
 
 JWT_KEY=123456789ASDF123456789ASDF
 SKIP_PREFLIGHT_CHECK=true
